about page update

--- a/about.html
+++ b/about.html
@@ -71,37 +71,78 @@
 						<li>О нас</li>
 					</ul>
 					<h1>История</h1>
-					<ul class="history-line">
-						<li>
+					<div class="history-line">
+						<div class="item">
 							<h4>1995</h4>
 							<h6>Объединила в своем составе:</h6>
 							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
 							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
 							<p>— Центр управленческого консультирования</p>
-						</li>
-						<li>
+						</div>
+						<div class="item">
 							<h4>2003</h4>
 							<h6>Объединила в своем составе:</h6>
 							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
 							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
 							<p>— Центр управленческого консультирования</p>
-						</li>
-						<li>
+						</div>
+						<div class="item">
 							<h4>2007</h4>
 							<h6>Объединила в своем составе:</h6>
 							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
 							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
 							<p>— Центр управленческого консультирования</p>
-						</li>
-						<li>
+						</div>
+						<div class="item">
+							<h4>2008</h4>
+							<h6>Объединила в своем составе:</h6>
+							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
+							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
+							<p>— Центр управленческого консультирования</p>
+						</div>
+						<div class="item">
+							<h4>2009</h4>
+							<h6>Объединила в своем составе:</h6>
+							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
+							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
+							<p>— Центр управленческого консультирования</p>
+						</div>
+						<div class="item">
+							<h4>2010</h4>
+							<h6>Объединила в своем составе:</h6>
+							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
+							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
+							<p>— Центр управленческого консультирования</p>
+						</div>
+						<div class="item">
+							<h4>2011</h4>
+							<h6>Объединила в своем составе:</h6>
+							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
+							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
+							<p>— Центр управленческого консультирования</p>
+						</div>
+						<div class="item">
+							<h4>2012</h4>
+							<h6>Объединила в своем составе:</h6>
+							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
+							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
+							<p>— Центр управленческого консультирования</p>
+						</div>
+						<div class="item">
+							<h4>2013</h4>
+							<h6>Объединила в своем составе:</h6>
+							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
+							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
+							<p>— Центр управленческого консультирования</p>
+						</div>
+						<div class="item">
 							<h4>2015</h4>
 							<h6>Объединила в своем составе:</h6>
 							<p>— Алтайское региональное агентство развития малого и среднего бизнеса</p>
 							<p>— Межрегиональный маркетинговый центр "Алтай-Москва"</p>
 							<p>— Центр управленческого консультирования</p>
-						</li>
-						<span class="bg"></span>
-					</ul>
+						</div>
+					</div>
 					<div class="benefits">
 						<h2>Преимущества</h2>
 						<ul class="default">
@@ -132,7 +173,7 @@
 						</li>
 					</ul>
 					<div class="text">
-						<h2>Качество</h2>
+						<h2>Политика в области качества</h2>
 						<p>Политика компании в области качества отражает основные ценности Агентства, является частью общей политики и стратегии развития, а также инструментом для постоянного улучшения качества услуг.</p>
 						<h6>Для достижения целей компания следует следующим принципам:</h6>
 						<ul class="default">
